@@ -330,9 +330,6 @@ function check_userfiles() {
 	$userfiles = DOKU_PLUGIN . 'ckgdoku/fckeditor/userfiles/';
     $save_dir = trim($conf['savedir']);  
     
-// msg('BASE='. DOKU_BASE);
-// msg(DOKU_URL);
-// msg('REL='. DOKU_REL);
     if(!preg_match('#^\.\/data$#',$save_dir)) {
         $data_media = $conf['savedir']  . '/media/';
         
@@ -707,18 +704,40 @@ function reset_user_rewrite_check() {
 	   global $JSINFO;
 	  
        if(isset($_COOKIE['FCKG_USE']) && $_COOKIE['FCKG_USE'] =='_false_' ) return;
+       if($ACT == 'login') $this->chk_dbl_clk_time();
        if($ACT == 'edit') {
           $this->user_rewrite = $conf['userewrite'];
 	     $conf['userewrite']  = 0; 
        }
-       msg( $this->getConf('htmlblock_ok'),1);
-       if($conf['htmlok'] || $this->getConf('htmlblock_ok')) { 
+       if($conf['htmlok'] || $this->getConf('htmblock_ok')) { 
          $JSINFO['htmlok'] = 1;
     }	  
     else $JSINFO['htmlok'] = 0;
     }	  
 
-   
+function chk_dbl_clk_time() {  
+   global $INFO;
+   if($INFO['isadmin'] || $INFO['ismanager'] )    {  // only admins and mgrs get messages
+	       $show_msg = true;		   
+	}
+   if(!$show_msg)  return;
+  $filename =  metaFN('fckl:dblck','.meta'); 
+  $msg = $this->getLang('dblclk');
+   if (file_exists($filename)) {      
+           $reps = io_readFile($filename);
+           if($reps <2) {
+              $reminder =  $this->getLang('dblclk_reminder');
+              msg("($reminder) " . $msg,2 );    
+              io_saveFile($filename,$reps+1); 
+              return;
+           }
+   }
+   else
+       {      
+       io_saveFile($filename,'1'); 
+       msg($msg,2);    
+   }
+}
 /**
   checked for additional dw priority possibilities only if the dw priority option is set to true
 */
