@@ -53,3 +53,5 @@ $lang["sym_not created_1"] = 'Unable to create ';
 $lang["sym_not created_2"] = 'Cannot create symlinks for filebrowser:  cannot access: ';
 $lang["sym_not created_3"] = 'There was an error when trying to create symbolic links in ';
 $lang["syms_created"] = 'The following links were created in the userfiles directory: ';
+$lang['dblclk'] ="<b>New Feature:</b> double click browser window to open DW Editor for section editing at cursor. <b>See: </b><a href='https://www.dokuwiki.org/plugin:ckgedit#direct_access_to_dokuwiki_editor'>direct_access_to_dokuwiki_editor</a>. ";
+$lang['dblclk_reminder'] = "<b>Reminder</b> ";
